# foo

./: CMakeLists.txt
.github/workflows/: test.yml
cmake/: foo-config.cmake.in
src/: CMakeLists.txt
test/: CMakeLists.txt  testAdd.cpp
